# hutt-archiver

./: .gitignore  Cargo.toml  config.example.json5
.sqlx/: query-0b4ee2b83318afdbc75ae1ef8569e80a003f3934ef73e08993a2c1bb9425343a.json  query-452f2486efd268086d8eb56d90e9f1916ba0a41ab2b8e17ff8c561fbc7a6c8a9.json  query-53165c9c18b26ba90cbe2c055eda4410a0e83472d447d992fca65090c7a8bd83.json  query-595d64b2ce7bd0a14b6ee9af201279dfad0da56da1563104f6faa6171025b0f4.json  query-5fb2e15fc34218578a20eb0f51ed3faa864b9262231a16ddb4c43197cc9a3c55.json  query-7a30694e6c7b36595e4e68f0d52b4388d11110aea01070d76c8623a83894d6d0.json  query-92f2af728a913136218c07aeede3a78e4dec444d04abf9e150ac6c6ef1db1c0b.json  query-a42e762a7f1be020b2d653e6c87c255432bfdc9e3ed47c4e19cb66d399073a99.json  query-b4c5f19ee80f5c8bbe98afa120b87d0249f421112ea4cec1e238bae2bd14039e.json  query-b8bb44e0d937449d403758968ec0d2bdb01c23978de78a452baabf4c87020d24.json  query-b8ece7aa3cc713d5f0cb241f5d65ba22e28263f8811ad760956bba0e82cbcde9.json
migrations/: 20240430103234_create_post_table.sql  20240512115828_llm_generated_titles.sql  20240512172133_created_at_field.sql
src/: database.rs  filenames.rs  main.rs
src/commands/: download.rs  metadata.rs  mod.rs  rename.rs  set_dates.rs
