[package]
name = "hutt-archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = { version = "1.1.6", features = ["serde1"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
indicatif = "0.17.8"
itertools = "0.13.0"
json5 = "0.4.1"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
sanitize-filename = "0.5.0"
scraper = "0.20.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sqlx = { version = "0.8.0", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "json",
] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
fake = "2.9.2"
tracing-test = "0.2.4"
